# ha-mcp

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  .pr2020.diff  .pre-commit-config.yaml  .python-versions.json  .python-versions.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DASHBOARD_IMPLEMENTATION_PROPOSAL.md  DASHBOARD_ISSUE_67_RESPONSE.md  DASHBOARD_TAKE_CONTROL_FINDINGS.md  Dockerfile  MANIFEST.in  PRIVACY.md  README.md  SECURITY.md  TEST_COVERAGE_ANALYSIS.md  YAML_VS_JSON_ANALYSIS.md  bad_code.py  comparison-with-official-integration.md  docker-compose.screenshot.yml  docker-compose.yml  fastmcp-cloudflared.json  fastmcp-http.json  fastmcp-sse.json  fastmcp-webclient.json  fastmcp.json  ha-mcp.spec  hacs.json  lefthook.yml  mcp-test-config.json  pyproject.toml  renovate.json  research-nabu-casa-ingress.md  run_mcp_server.bat  (+2 more)
.claude/agents/: github-issue-analyzer.md  issue-analysis.md  issue-to-pr-resolver.md  pr-checker.md  triage.md
.gemini/: config.yaml  styleguide.md
.githooks/: README.md  pre-commit
.github/: dependabot.yml  integration-mirror-readme-prefix.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: agent_behavior_feedback.md  bug_report.md  documentation.md  feature_request.md  runtime_bug.md  runtime_bug.yml  startup_bug.yml
.github/integration-mirror-workflows/: release-on-tag.yml
.github/workflows/: _build-and-release.yml  _ci-validation.yml  _update-addon-config.yml  addon-publish-dev.yml  addon-publish.yml  addon-release.yml  build-binary.yml  build-haos-test-image.yml  check-python-versions.yml  close-inactive-issues.yml  close-needs-info.yml  codeql-quality.yml  codex-autofix.yml  dependabot-auto-merge.yml  deploy.yml  docker-publish.yml  e2e-tests-wasm.yml  e2e-tests.yml  gemini-triage.yml  haos-e2e-embedded-tests.yml  haos-e2e-inaddon-tests.yml  haos-e2e-tests.yml  hotfix-release.yml  issue-triage.yml  notify-dev-channel.yml  performance-tests.yml  pr-1995-site-preview.yml  pr-codex-autofix-async.yml  pr-codex-autofix-sync.yml  pr-codex-autofix.yml  pr-codex-review-delivery.yml  pr-codex-review-request.yml  pr-validate-hotfix.yml  pr.yml  publish-dev.yml  pypi-publish.yml  regen-lockfile.yml  release-publish.yml  release.yml  renovate.yml  (+14 more)
custom_components/ha_mcp_tools/: __init__.py  config_flow.py  const.py  coordinator.py  embedded_entry.py  embedded_server.py  embedded_setup.py  hacs_nudge.py  llm_api.py  manifest.json  mcp_webhook.py  oauth_autoapprove.py  oauth_legacy.py  services.yaml  strings.json  ui_panel.py  update.py  websocket_api.py  yaml_rt.py
docs/: AWS_COGNITO.md  FAQ.md  OAUTH.md  TECH_DEBT.md  WASM_TESTING.md  Windows-uv-guide.md  beta.md  dev-channel.md  dev-mode.md  gate-demo-throwaway.md  in-process-server.md  macOS-uv-guide.md  ms365-integration.md  oidc.md  tool-usage-logging.md
examples/open-webui/: .env.example  README.md  deploy.sh  docker-compose.librechat.yml  docker-compose.yml  librechat.yaml  mini_mcp.py
homeassistant-addon/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  build.yaml  config.yaml  pyproject.toml  requirements.txt  run.sh  start.py
homeassistant-addon-dev/: DOCS.md  Dockerfile  README.md  config.yaml  start.py
homeassistant-addon-dev/mcp_proxy/: __init__.py  strings.json
homeassistant-addon-dev/translations/: de.yaml  en.yaml  ru.yaml
homeassistant-addon-screenshot/: CHANGELOG.md  Dockerfile  NOTICE.md  README.md  config.yaml
homeassistant-addon-screenshot/ha-puppet/: DEVICES.md  auth.js  auth.test.mjs  bmp.js  const.js  devices.js  devices.json  http.js  package-lock.json  package.json  screenshot.js  test_bmp.mjs  ui.js  validate-devices.js
homeassistant-addon-webhook-proxy/: AGENTS.md  CHANGELOG.md  DOCS.md  Dockerfile  config.yaml  start.py
homeassistant-addon-webhook-proxy-dev/: AGENTS.md  CHANGELOG.md  DOCS.md  Dockerfile  config.yaml  start.py
homeassistant-addon-webhook-proxy-dev/mcp_proxy_dev/: __init__.py  config_flow.py  manifest.json  oauth.py  oauth_autoapprove.py  repairs.py
homeassistant-addon-webhook-proxy-dev/translations/: en.yaml
homeassistant-addon-webhook-proxy/mcp_proxy/: __init__.py  auth_native.py  manifest.json  oauth.py  oauth_autoapprove.py  repairs.py  services.yaml
homeassistant-addon-webhook-proxy/translations/: en.yaml
homeassistant-addon/mcp_proxy/: __init__.py  manifest.json
homeassistant-addon/translations/: de.yaml  en.yaml  ru.yaml
homeassistant-integration/ha_mcp_server/: __init__.py  config_flow.py  const.py  embedded_server.py  embedded_setup.py  manifest.json  mcp_webhook.py  strings.json
local/: docs-site-v2-notes.md
local/mcp-client-research/: Alibaba_Qwen_Code.md  Amazon_Q_Developer.md  Amp_IDE.md  Anthropic_Claude_Code.md  Anthropic_Claude_Desktop.md  Anysphere_Cursor.md  Cline_Extension.md  Codeium_Windsurf.md  Continue_dev.md  GitHub_Copilot.md  Google_Gemini_CLI.md  Goose.md  JetBrains_IDEs.md  Kiro.md  LM_Studio.md  Microsoft_VS_Code.md  Microsoft_Visual_Studio.md  OVERVIEW.md  OpenAI_ChatGPT.md  OpenAI_Codex.md  Raycast_Raycast.md  Roo_Code.md  Warp_Terminal.md  Zed_Industries_Zed.md  repos.json
mcpb/: manifest.template.json
packaging/binary/: ha-mcp.spec
packaging/mcpb/: generate_manifest.py  manifest.template.json
prompts/: PROJECT_CODEX_LOW_TOKEN_MODE_PROMPT.md
rules/: no-return-error-response.yml
scripts/: bake_local_calendar.py  bake_pagination_seed.py  build_mirror_readme.py  build_mirror_release_notes.py  codeql_quality_gate.py  extract_tools.py  generate_manifest.py  install-linux.sh  install-macos.sh  install-windows.ps1  install.sh  live_regression_1012.py  redact_diagnostics_secrets.py  render_server_manifest.py  run-e2e-with-wasm.sh  sync-skills.sh  tool_log_stats.py  validate_server_manifest.py  verify_triage_prompt_budget.mjs  webhook_proxy_sync.py
scripts/fork-dev/: README.md  (+2 more)
site/: AGENTS.md  CLAUDE.md  README.md  eslint.config.js  package-lock.json  package.json  tailwind.config.mjs
templates/: CHANGELOG.md.j2
tests/: .env.test  AGENTS.md  README.md  _gate_demo.txt  conftest.py  pytest.ini  test_constants.py  test_env_manager.py
(+862 files in other folders)
