[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-mcp"
version = "7.12.3"
description = "Home Assistant MCP Server - Complete control of Home Assistant through MCP"
readme = "README.md"
# Upper bound widened to <3.15 so the package installs on Home Assistant's
# interpreter when run in-process by the ha_mcp_tools component (HA
# core-2026.7 ships Python 3.14). src/ stays 3.13-compatible.
requires-python = ">=3.13,<3.15"
license = {text = "MIT"}
authors = [
    {name = "Julien", email = "github@qc-h.net"}
]
keywords = ["mcp", "home-assistant", "ai", "automation", "smart-home"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastmcp==3.4.3",
    "httpx[socks]==0.28.1",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
    "truststore==0.10.4",
    "websockets==16.1",
    # Range (not a hard pin) so the resolver can satisfy Home Assistant's own
    # cryptography constraint when ha-mcp is installed into the HA venv for
    # in-process embedding (HA 2026.6 pins cryptography==48.0.0, 2026.7 pins
    # 48.0.1 — the floor must admit every supported core's pin; live-found on
    # the embedded e2e lane against the HA 2026.6.4 image).
    # cryptography is a transitive dependency only — never imported in src/.
    "cryptography>=48.0.0,<50",
    "pydantic-monty==0.0.18",
    "tzdata>=2024.1",
    "packaging>=24.0",
]

[project.urls]
"Homepage" = "https://github.com/homeassistant-ai/ha-mcp"
"Bug Tracker" = "https://github.com/homeassistant-ai/ha-mcp/issues"
"Repository" = "https://github.com/homeassistant-ai/ha-mcp"

[project.scripts]
ha-mcp = "ha_mcp.__main__:main"
ha-mcp-smoke-test = "ha_mcp.smoke_test:main"
hamcp-test-env = "tests.test_env_manager:main"
ha-mcp-web = "ha_mcp.__main__:main_web"
ha-mcp-sse = "ha_mcp.__main__:main_sse"
ha-mcp-oauth = "ha_mcp.__main__:main_oauth"

[tool.setuptools]
package-dir = {"" = "src", "tests" = "tests"}
packages = { find = { where = ["src", "."], include = ["ha_mcp*", "tests"] } }

[tool.setuptools.package-data]
ha_mcp = ["py.typed", "_pypi_marker", "settings_ui/settings.html", "settings_ui/settings.js", "settings_ui/settings.css", "resources/skills-vendor/**/*"]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
# /tmp keeps the cache on Linux tmpfs — avoids the slow Windows FS in WSL2.
# Windows-native contributors can remove this line or override with MYPY_CACHE_DIR.
cache_dir = "/tmp/.mypy_cache"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "fastmcp.*",
    "jq",
    "pydantic_monty",
    "pydantic_monty.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "homeassistant.*",
    "aiohasupervisor",
    "aiohasupervisor.*",
    "aiohttp",
    "awesomeversion",
    "yarl",
    "voluptuous",
    # Ships with HA core at runtime (helpers.llm schema conversion, #1745);
    # not installed in this dev environment.
    "voluptuous_openapi",
    "jsonschema",
    "requests",
    "requests.*",
]
ignore_missing_imports = true


[tool.ruff]
target-version = "py313"
line-length = 88
extend-exclude = [
    "tests/initial_test_state",
    # HA integration manifests must be strict JSON (no trailing commas);
    # ruff 0.15+ formats .json files as JSONC and inserts trailing commas
    # which makes Python's json.load() reject the file at HA startup.
    "custom_components/**/*.json",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "C90",   # mccabe complexity
    "UP",    # pyupgrade
    "RUF",   # ruff-specific rules
    "PIE",   # misc lints
    "PERF",  # performance anti-patterns
    "ASYNC", # async best practices
    "A",     # builtin shadowing
    "LOG",   # logging best practices
    "SIM",   # simplify
]
ignore = [
    "E501",    # line too long — formatter handles this
    "B008",    # function calls in defaults — FastMCP pattern
    "SIM102",  # collapsible-if — sometimes less readable
    "SIM108",  # ternary — sometimes less readable
    "SIM105",  # contextlib.suppress — style preference
    "ASYNC109",# timeout params are standard in HA API patterns
    "RUF001",  # ambiguous unicode — HA entity names use degree symbols etc
    "RUF003",  # ambiguous unicode in comments
    "RUF010",  # explicit f-string type conversion — str(x) is clearer than !s
    "RUF059",  # unused unpacked variable
    "SIM118",  # in-dict-keys — style preference
    "PIE810",  # multiple-starts-ends-with — style preference
    "RUF005",  # collection-literal-concatenation
    "RUF022",  # unsorted-dunder-all
    "RUF013",  # implicit-optional
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["E501", "B011"]
# C901 (mccabe complexity) grandfathered debt: newly enabled rule, these files
# already exceeded the threshold. Remove a line once its functions are
# refactored below threshold -- do not add new files here.
"custom_components/ha_mcp_tools/__init__.py" = ["C901"]
"custom_components/ha_mcp_tools/mcp_webhook.py" = ["C901"]
"homeassistant-addon/start.py" = ["C901"]
"homeassistant-addon-webhook-proxy-dev/mcp_proxy_dev/__init__.py" = ["C901"]
"homeassistant-addon-webhook-proxy-dev/start.py" = ["C901"]
"homeassistant-addon-webhook-proxy/mcp_proxy/__init__.py" = ["C901"]
"homeassistant-addon-webhook-proxy/start.py" = ["C901"]
"packaging/mcpb/generate_manifest.py" = ["C901"]
"scripts/extract_tools.py" = ["C901"]
"src/ha_mcp/backup_manager.py" = ["C901"]
"src/ha_mcp/config.py" = ["C901"]
"src/ha_mcp/policy/handlers.py" = ["C901"]
"src/ha_mcp/server.py" = ["C901"]
"src/ha_mcp/settings_ui/__init__.py" = ["C901"]
"src/ha_mcp/tools/auto_backup.py" = ["C901"]
"src/ha_mcp/tools/backup.py" = ["C901"]
"src/ha_mcp/tools/radio/matter.py" = ["C901"]
"src/ha_mcp/tools/radio/zigbee.py" = ["C901"]
"src/ha_mcp/tools/radio/zwave.py" = ["C901"]
"src/ha_mcp/tools/reference_validator.py" = ["C901"]
"src/ha_mcp/tools/tools_areas.py" = ["C901"]
"src/ha_mcp/tools/tools_code.py" = ["C901"]
"src/ha_mcp/tools/tools_config_automations.py" = ["C901"]
"src/ha_mcp/tools/tools_config_scenes.py" = ["C901"]
"src/ha_mcp/tools/tools_config_scripts.py" = ["C901"]
"src/ha_mcp/tools/tools_dev.py" = ["C901"]
"src/ha_mcp/tools/tools_energy.py" = ["C901"]
"src/ha_mcp/tools/tools_history.py" = ["C901"]
"src/ha_mcp/tools/tools_integrations.py" = ["C901"]
"src/ha_mcp/tools/tools_system.py" = ["C901"]
"src/ha_mcp/tools/tools_yaml_config.py" = ["C901"]
"src/ha_mcp/tools/tools_zones.py" = ["C901"]
"src/ha_mcp/transforms/categorized_search.py" = ["C901"]
"src/ha_mcp/utils/fuzzy_search.py" = ["C901"]
"src/ha_mcp/visibility/resolver.py" = ["C901"]
"tests/src/e2e/conftest.py" = ["C901"]
"tests/src/e2e/error_handling/test_network_errors.py" = ["C901"]
"tests/src/e2e/policy/test_readonly_mode.py" = ["C901"]
"tests/src/e2e/utilities/cleanup.py" = ["C901"]
"tests/src/e2e/utilities/wait_helpers.py" = ["C901"]
"tests/src/e2e/workflows/automation/test_helpers.py" = ["C901"]
"tests/src/e2e/workflows/automation/test_lifecycle.py" = ["C901"]
"tests/src/e2e/workflows/core/test_bulk.py" = ["C901"]
"tests/src/e2e/workflows/device_control/test_lights.py" = ["C901"]
"tests/src/e2e/workflows/scripts/test_lifecycle.py" = ["C901"]
"tests/src/haos_runtime.py" = ["C901"]
"tests/src/unit/_embedded_stubs.py" = ["C901"]
"tests/src/unit/test_action_discriminator.py" = ["C901"]
"tests/src/unit/test_advanced_settings_coverage.py" = ["C901"]
"tests/src/unit/test_fields_projection_docstring_completeness.py" = ["C901"]
"tests/src/unit/test_read_only.py" = ["C901"]
"tests/src/unit/test_settings_ui_js_behavior.py" = ["C901"]
"tests/test_env_manager.py" = ["C901"]
"tests/uat/ha_wait.py" = ["C901"]
"tests/uat/openai_agent.py" = ["C901"]
"tests/uat/run_uat.py" = ["C901"]
"tests/uat/stories/run_story.py" = ["C901"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "automation: automation lifecycle tests",
    "calendar: calendar event management tests",
    "device: device control tests",
    "script: script orchestration tests",
    "helper: helper integration tests",
    "convenience: convenience tools tests (scene, weather, energy, docs)",
    "error_handling: error handling and edge case tests",
    "cleanup: tests that create entities needing cleanup",
    "performance: performance measurement and regression tests",
    "external_only: skips on HAOS inaddon tier (server runs in a separate addon container, so in-process env monkeypatching doesn't reach it)",
    "inaddon_only: only runs on HAOS inaddon tier",
]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "build>=1.2.2",
    "docker>=7.1.0",
    "httpx2>=2.4.0",
    "mypy>=1.17.0",
    "openai>=1.0.0",
    "psutil>=7.0.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
    "pytest-rerunfailures>=15.0",
    # Real voluptuous for the config-flow tests (the component's
    # config_flow imports it; HA provides it at runtime, tests need it here).
    "voluptuous>=0.15.2",
    # Real voluptuous-openapi for the embedded e2e LLM-API test: it converts
    # the REAL tool-schema catalog exactly like llm_api.py does at runtime
    # (HA core provides it at runtime; unit tests stub it).
    "voluptuous-openapi>=0.4.1",
    "pytest-xdist>=3.8.0",
    "requests>=2.25.0",
    "lefthook>=1.10.0",
    "ruamel.yaml>=0.18.0",
    "ruff>=0.12.12",
    "testcontainers>=4.13.0",
    "ast-grep-cli>=0.42.0",
]

# Semantic versioning configuration
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = """
pip install uv && uv lock
git add uv.lock
"""
dist_path = "dist/"
upload_to_PyPI = true
upload_to_release = true
remove_dist = false

# Commit message parsing
commit_parser = "angular"
commit_parser_options = { major_tags = ["BREAKING", "!"], minor_tags = ["feat"], patch_tags = ["fix", "perf", "refactor"] }

# Changelog configuration
[tool.semantic_release.changelog]
template_dir = "templates"
exclude_commit_patterns = [
    "^.*\\(site\\).*$",           # Commits with (site) scope
    '''chore\(addon\): [Ss]ync changelog.*''',  # Changelog sync commits
]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

# Version scheme
major_on_zero = true
allow_zero_version = false

# Branch and tag configuration
branch = "master"

# Publish configuration (v10 syntax)
[tool.semantic_release.publish]
# GitHub release is created by build-binary.yml workflow to include binaries
upload_to_vcs_release = false
